# Moxin-Voice

./: .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_WITH_NIX.md  LICENSE  MACOS_CHECKLIST.md  MACOS_DISTRIBUTION_PLAN.md  MACOS_SETUP.md  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  MLX_CORE_MIGRATION.md  MLX_TTS_MIGRATION.md  MOXIN_DORA_ARCHITECTURE.md  MOXIN_DORA_INTEGRATION_PLAN.md  NODE_BACKENDS_SUMMARY.md  QUICKSTART_MACOS.md  QWEN3_TTS_INTEGRATION_STATUS.md  QWEN3_TTS_NODE_MIGRATION_FLOW.md  QWEN_MLX_SUBPROJECT_RESEARCH.md  README.md  RELEASE_NOTES.md  SHARED_COMPONENTS_ARCHITECTURE.md  STATE_MANAGEMENT_ANALYSIS.md  TIMER_USAGE_ANALYSIS.md  flake.nix  moxin-studio-dora-integration-checklist.md  moxin-studio-roadmap.claude  moxin-studio-roadmap.m2  pixi.toml  roadmap-claude.md  roadmap-glm.md  roadmap-m2.md  run-mofa-studio.sh  run.sh  voice_clone_modal_new_methods.rs  架构指南.md
apps/mofa-tts/: Cargo.toml
apps/mofa-tts/src/: audio_player.rs  lib.rs  preferences.rs  screen.rs  screen_moyoyo.rs  settings_screen.rs  task_persistence.rs  timbre.rs  training_executor.rs  training_manager.rs  voice_clone_modal.rs  voice_data.rs  voice_persistence.rs  voice_selector.rs
apps/mofa-tts/src/i18n/: en.json
apps/moxin-voice/: Cargo.toml
apps/moxin-voice/dataflow/: translation.yml  translation_qwen35.yml  tts.yml
apps/moxin-voice/src/: app_preferences.rs  app_update.rs  audio_player.rs  dora_integration.rs  lib.rs  screen.rs  task_persistence.rs  training_executor.rs  training_manager.rs  transcript_export.rs  tts_history.rs  voice_clone_modal.rs  voice_data.rs  voice_persistence.rs  voice_selector.rs
apps/moxin-voice/src/i18n/: en.json  mod.rs  zh.json
mofa-ui/: Cargo.toml
mofa-ui/src/: app_data.rs  i18n_manager.rs  lib.rs
moxin-dora-bridge/: Cargo.toml
moxin-dora-bridge/src/: bridge.rs  controller.rs  data.rs  dispatcher.rs  error.rs  lib.rs  parser.rs  shared_state.rs
moxin-dora-bridge/src/widgets/: aec_input.rs  asr_listener.rs  audio_input.rs  audio_player.rs  mod.rs  prompt_input.rs  screencapture_input.rs  system_log.rs  translation_listener.rs
moxin-init/: Cargo.toml
moxin-init/src/: main.rs
moxin-ui/: Cargo.toml
moxin-ui/src/: app_data.rs  audio.rs  lib.rs  log_bridge.rs  registry.rs  system_monitor.rs  theme.rs  traits.rs
moxin-ui/src/shell/: header.rs  layout.rs  mod.rs  sidebar.rs  status_bar.rs
moxin-ui/src/widgets/: aec_button.rs  chat_input.rs  chat_panel.rs  dataflow_picker.rs  led_meter.rs  log_panel.rs  mic_button.rs  mod.rs  moxin_hero.rs  provider_selector.rs  role_editor.rs
moxin-voice-shell/: .gitignore  BUILDING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
moxin-voice-shell/src/: app.rs  main.rs
node-hub/dora-maas-client/: Cargo.toml
node-hub/dora-primespeech-mlx/: Cargo.toml
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/: CRITICAL_CODE_REVIEW.md  DEVPLAN_SPEED_STREAMING.md  README.md  pyproject.toml
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/2/: phones.txt
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/docs/: FINETUNING_GUIDE.md  REFACTORING_PROPOSAL.md  python-rust-implementation-map.md  vits-training-amplitude-issue.md  voice-cloning-improvement-plan.md
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/dora_primespeech_mlx/: main.py
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/examples/: compare_hubert_rust.rs  debug_bert_alignment.rs  debug_hebing_comparison.rs  debug_phonemes.rs  debug_semantic_tokens_hebing.rs  test_forward_train.rs  test_vits_compare.rs  trace_t2s_full.rs  train_t2s.rs  train_vits.rs
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/python/: __init__.py  engine.py  generate.py
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/scripts/: compare.sh  compare_pipeline.py  compare_preprocessing.py  compare_preprocessing_minimal.py  convert_gpt_sovits_data.py  convert_gpt_weights.py  run_dora_g2p.py
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/src/: cache.rs  error.rs  inference.rs  sampling.rs
node-hub/dora-primespeech-mlx/patches/gpt-sovits-mlx/tests/: __init__.py  test_gpt_model.py
node-hub/dora-primespeech-mlx/src/: audio_post.rs  main.rs  protocol.rs  voice_state.rs
node-hub/dora-qwen3-asr/: Cargo.toml
node-hub/dora-qwen3-asr/patches/qwen3-asr-mlx/: Cargo.toml  src
node-hub/dora-qwen3-asr/src/: main.rs
node-hub/dora-qwen3-translator/: Cargo.toml
node-hub/dora-qwen3-translator/src/: main.rs
node-hub/dora-qwen3-tts-mlx/: Cargo.toml  QWEN3_TTS_MLX_ICL_TRIM_PR.md
node-hub/dora-qwen3-tts-mlx/patches/qwen3-tts-mlx/: Cargo.toml  README.md
node-hub/dora-qwen3-tts-mlx/patches/qwen3-tts-mlx/examples/: synthesize.rs
node-hub/dora-qwen3-tts-mlx/patches/qwen3-tts-mlx/src/: config.rs  error.rs  generate.rs  lib.rs  mrope.rs  sampling.rs  speaker_encoder.rs  speech_encoder.rs  speech_tokenizer.rs  talker.rs
node-hub/dora-qwen3-tts-mlx/src/: audio_post.rs  main.rs
node-hub/dora-qwen3-tts-mlx/voices/baiyang/: ref.wav.bak
node-hub/dora-qwen3-tts-mlx/voices/yangyang/: ref_text.txt
node-hub/dora-qwen35-translator/: Cargo.toml
node-hub/dora-qwen35-translator/src/: main.rs  transcript_buffer.rs
node-hub/moxin-tts-node/: Cargo.toml
node-hub/moxin-tts-node/patches/gpt-sovits-mlx/: CODE_REVIEW_COMPARISON.md  Cargo.toml
node-hub/moxin-tts-node/patches/gpt-sovits-mlx/2/: phone_ids.txt  word2ph.txt
node-hub/moxin-tts-node/patches/gpt-sovits-mlx/docs/: GPT-SoVITS-Architecture-and-Implementation.md  MEL_OPTIMIZATION_PLAN.md  PERFORMANCE_ANALYSIS.md  VITS_TRAINING_FIX_PLAN.md  fewshot-training-devplan.md  python-rust-gap.md  training-support-plan.md  vits-training-fix-plan.md  vits-training-implementation.md  vits-training-plan.md
node-hub/moxin-tts-node/patches/gpt-sovits-mlx/dora_primespeech_mlx/: __init__.py
node-hub/moxin-tts-node/patches/gpt-sovits-mlx/examples/: compare_g2p.rs  compare_hebing_py.py  compare_t2s_intermediates.rs  debug_preprocess.rs  debug_yinhang.rs  export_vits_onnx.rs  (+5 more)
node-hub/moxin-tts-node/src/: fewshot_trainer.rs  main.rs  qwen_node.rs  voice_registry.rs
(+354 files in other folders)
