[workspace]
resolver = "2"
members = [
    "moxin-voice-shell",
    "moxin-widgets",
    "moxin-dora-bridge",
    "moxin-ui",
    "apps/moxin-voice",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Makepad UI framework
makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }

# Audio
cpal = "0.15"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Utilities
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
sysinfo = "0.32"
crossbeam-channel = "0.5"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

# Dora - robotics framework for voice chat architecture
dora-node-api = "0.4.0"
# dora-node-api = { git = "https://github.com/dora-rs/dora.git", tag = "v0.3.12" }
