[package]
name = "moxin-ui"
version.workspace = true
edition.workspace = true
description = "Shared UI component library for Moxin Studio applications"

[dependencies]
makepad-widgets.workspace = true
moxin-dora-bridge = { path = "../moxin-dora-bridge" }
moxin-widgets = { path = "../moxin-widgets" }
parking_lot.workspace = true
sysinfo = "0.32"
log.workspace = true
# Audio device management
cpal.workspace = true
# Log bridge
crossbeam-channel.workspace = true
once_cell.workspace = true
