[package]
name = "moxin-voice"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
makepad-widgets.workspace = true
moxin-widgets = { path = "../moxin-widgets" }
moxin-ui = { path = "../moxin-ui" }
moxin-dora-bridge = { path = "../moxin-dora-bridge" }
moxin-voice = { path = "../apps/moxin-voice" }

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
sysinfo.workspace = true
ctrlc = "3.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "moxin-voice"
path = "src/main.rs"
