[package]
name = "mofa-tts"
version.workspace = true
edition.workspace = true

[features]
default = []
moyoyo-ui = []  # Enable MoYoYo.tts style sidebar layout

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
mofa-ui = { path = "../../mofa-ui" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
log.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
mofa-dora-bridge = { path = "../../mofa-dora-bridge" }
once_cell = "1.18"
sysinfo.workspace = true
hound = "3.5"
rfd = "0.14"
rand.workspace = true
rubato = "0.15"  # High-quality audio resampling with anti-aliasing
chrono = "0.4"
