[package]
name = "moxin-voice"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
moxin-widgets = { path = "../../moxin-widgets" }
moxin-ui = { path = "../../moxin-ui" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
log.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
moxin-dora-bridge = { path = "../../moxin-dora-bridge" }
once_cell = "1.18"
sysinfo.workspace = true
hound = "3.5"
rfd = "0.14"
rand.workspace = true
rubato = "0.15"  # High-quality audio resampling with anti-aliasing
