[package]
name = "dora-primespeech-mlx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PrimeSpeech MLX Dora backend for Moxin Voice"

[dependencies]
gpt-sovits-mlx = { path = "patches/gpt-sovits-mlx" }
mlx-rs = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", package = "mlx-rs" }
dora-node-api = "0.4.0"
arrow = { version = "54.2.1", default-features = false, features = ["ipc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
hound = "3.5"

[[bin]]
name = "moxin-tts-node"
path = "src/main.rs"

[[bin]]
name = "moxin-fewshot-trainer"
path = "src/fewshot_trainer.rs"
