[package]
name = "dora-qwen3-translator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qwen3 LLM translation Dora node for Moxin Voice (Apple Silicon / MLX)"

[dependencies]
# Qwen3 LLM inference via OminiX-MLX (patched to local checkout in workspace Cargo.toml)
qwen3-mlx = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", package = "qwen3-mlx" }
mlx-lm-utils = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", package = "mlx-lm-utils" }
mlx-rs = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", package = "mlx-rs" }

# Dora
dora-node-api = "0.4.0"
arrow = { version = "54.2.1", default-features = false, features = ["ipc"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[[bin]]
name = "dora-qwen3-translator"
path = "src/main.rs"
