[package]
name = "qwen3-asr-mlx"
version = "0.1.0"
edition = "2021"
autoexamples = false
description = "Qwen3-ASR speech recognition on Apple Silicon with MLX"
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "/Users/alan0x/.cargo/git/checkouts/ominix-mlx-4c1b6923576390a4/6aac996/mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "/Users/alan0x/.cargo/git/checkouts/ominix-mlx-4c1b6923576390a4/6aac996/mlx-rs/mlx-sys" }
mlx-rs-core = { path = "/Users/alan0x/.cargo/git/checkouts/ominix-mlx-4c1b6923576390a4/6aac996/mlx-rs-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = "0.21"
rubato = "0.16"
hound = "3.5"
rustfft = "6.2"
dirs = "5"
