[package]
name = "qwen3-tts-mlx"
version = "0.1.0"
edition = "2021"
autoexamples = false
description = "Qwen3-TTS text-to-speech inference on Apple Silicon using MLX"
keywords = ["tts", "speech-synthesis", "mlx"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "6aac996db8b71fb7dae7a2409c46b4f2ade93092", package = "mlx-rs" }
mlx-sys = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "6aac996db8b71fb7dae7a2409c46b4f2ade93092", package = "mlx-sys" }
mlx-rs-core = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "6aac996db8b71fb7dae7a2409c46b4f2ade93092", package = "mlx-rs-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokenizers = { version = "0.21", features = ["http"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "synthesize"
path = "examples/synthesize.rs"
